<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdditionActivity">

  <TextView
      android:id="@+id/text_newPlant"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="150dp"
      android:text="@string/newPlant_string"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <EditText
      android:id="@+id/editText_plantName"
      android:layout_width="300dp"
      android:layout_height="60dp"
      android:layout_marginTop="40dp"
      android:ems="10"
      android:hint="@string/plantName_string"
      android:inputType="textPersonName"
      android:textColor="@color/colorPrimaryDark"
      android:textColorHint="@color/colorPrimaryDark"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_newPlant" />

  <EditText
      android:id="@+id/editText_purchaseDate"
      android:layout_width="300dp"
      android:layout_height="60dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/purchased_string"
      android:inputType="date"
      android:textColor="@color/colorPrimaryDark"
      android:textColorHint="@color/colorPrimaryDark"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText_plantName" />

  <EditText
      android:id="@+id/editText_placement"
      android:layout_width="300dp"
      android:layout_height="60dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/placement_string"
      android:inputType="textPersonName"
      android:textColor="@color/colorPrimaryDark"
      android:textColorHint="@color/colorPrimaryDark"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText_purchaseDate" />

  <EditText
      android:id="@+id/editText_watering"
      android:layout_width="300dp"
      android:layout_height="60dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/watering_string"
      android:inputType="textPersonName"
      android:textColor="@color/colorPrimaryDark"
      android:textColorHint="@color/colorPrimaryDark"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText_placement" />

  <EditText
      android:id="@+id/editText_size"
      android:layout_width="300dp"
      android:layout_height="60dp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="60dp"
      android:ems="10"
      android:hint="@string/size_string"
      android:inputType="textPersonName"
      android:textColor="@color/colorPrimaryDark"
      android:textColorHint="@color/colorPrimaryDark"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText_watering"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/button_backToOverview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimaryDark"
      android:onClick="backToOverview"
      android:text="@string/go_back"
      app:layout_constraintBottom_toTopOf="@+id/text_newPlant"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.173"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.519" />

  <Button
      android:id="@+id/button_addPlant"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/yellow"
      android:onClick="buttonAdded"
      android:text="@string/addPlantToDatabase_string"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText_size" />

  <ImageButton
      android:id="@+id/imageButton2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/white"
      android:onClick="initLogout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>